TranslateY,overflow fix.

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -299,7 +299,9 @@ nav {
   background-size: 400% 400%;
   animation: gradient 15s ease infinite;
 }
-
+.skills {
+  overflow: hidden;
+}
 .card {
   /* height: 1em;
   width: 1em; */
@@ -320,6 +322,7 @@ nav {
 } */
 .content:hover {
   color: rgb(255, 255, 255);
+  transform: translateY(-5px);
   border-radius: 0.5rem;
   /* From https://css.glass */
   background: rgba(255, 255, 255, 0.15);
